--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bson": "^6.7.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "mongodb": "^6.6.1",
     "mongoose": "^8.3.2"
   }
 }
